[package]
name = "network-manager"
version = "0.8.0"
authors = ["Joseph Roberts <joe@resin.io>", "Zahari Petkov <zahari@resin.io>"]
description = "Rust NetworkManager bindings"
homepage = "https://github.com/resin-io-modules/network-manager"
repository = "https://github.com/resin-io-modules/network-manager"
keywords = ["NetworkManager", "network manager", "networking", "Wi-Fi", "wifi"]
categories = ["api-bindings", "network-programming", "os::unix-apis"]
license = "Apache-2.0"

[dependencies]
dbus = "0.5"
futures = "0.1"
futures-cpupool = "0.1"
tokio-timer = "0.1"
bitflags = "0.9"
ascii = "0.8"
log = "0.3"

[dependencies.clippy]
version = "*"
optional = true
