[package]
name = "network-manager"
version = "0.13.2"
authors = ["Zahari Petkov <zahari@balena.io>", "Aaron Brodersen <aaron@balena.io>"]
description = "Rust NetworkManager bindings"
homepage = "https://github.com/balena-io-modules/network-manager"
repository = "https://github.com/balena-io-modules/network-manager"
keywords = ["NetworkManager", "network-manager", "networking", "Wi-Fi", "wifi"]
categories = ["api-bindings", "network-programming", "os::unix-apis"]
license = "Apache-2.0"

[dependencies]
dbus = "0.5"
futures = "0.1"
futures-cpupool = "0.1"
tokio-timer = "0.2"
bitflags = "1.3"
ascii = "1.1"
log = "0.4"

[dependencies.error-chain]
version = "0.12"
default-features = false

[dev-dependencies]
clap = "2.32"
